k8s-yaml/traefik2/IngressClass.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata: 
  name: traefik
spec: 
  controller: traefik.io/ingress-controller
