k8s-yaml/traefik2/traefik-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.tycng.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
